# llama2-py-inference

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
scripts/: llama2_run.py
src/llama2/: inference.py
tests/: test_llama2_inference.py
